v3.7.1-rc.1 (XXXX-XX-XX)
------------------------

* Improve performance of agency cache by not copying the hierarchical Node
  tree result for serialization, but serializing it directly.

* Turn off maintenance threads on Coordinators, as they are not needed there.

* Fixed internal issue #733: Primary sort compression in ArangoSearch views now
  used properly.

* Change HTTP response code for error 1450 ("too many shards") from HTTP 500 to
  HTTP 400, as this is clearly a client error.

* Fix spurious lock timeout errors when restoring collections.

* Make sure cluster statistics in web UI work in case a coordinator is down.

* Updated arangosync to 0.7.8.

* Fixed a race between a new request and the keepAlive timeout.

* Fixed hotbackup upload and download with encryption at rest key indirection.

* Fixed crash in cleanup of parallel traversal queries.

* Added cluster metrics `arangodb_load_plan_accum_runtime_msec` and
  `arangodb_load_current_accum_runtime_msec` to track the total time spent in
  `loadPlan()` and `loadCurrent()` operations.

* Fixed wrong reporting of failures in all maintenace failure counter metrics
  (`arangodb_maintenance_action_failure_counter`). Previously, each successful
  maintenance operation was reported as a failure, so the failure counters
  actually were counters for the number of successful maintenance actions.

* Adjusted the scale of the `arangodb_maintenance_action_queue_time_msec` to
  cover a more useful range.

* The filter executor will now overfetch data again if followed by a limit, same
  as in 3.6 series.
  The following queries are effected:
  ```
  something
  FILTER a == b
  LIMIT 10
  ```
  something will now be asked for a full batch, instead of only 10 documents.

* In rare cases SmartBFS could use a wrong index for looking up edges. This is
  fixed now.

* The internally used JS-based ClusterComm send request function can now again
  use JSON, and does not require VelocyPack anymore. This fixes an issue with