@@ -181,12 +181,7 @@ class RestVocbaseBaseHandler : public RestBaseHandler {
   void generateForbidden();
 
   /// @brief generates precondition failed, without transaction info
-  ///        DEPRECATED
-  void generatePreconditionFailed(std::string const&, std::string const& key,
-                                  TRI_voc_rid_t rev);
-
-  /// @brief generates precondition failed, without transaction info
-  void generatePreconditionFailed(arangodb::velocypack::Slice const& slice);
+  void generatePreconditionFailed(arangodb::OperationResult const&);
 
   /// @brief generates not modified
   void generateNotModified(TRI_voc_rid_t);
@@ -200,7 +195,7 @@ class RestVocbaseBaseHandler : public RestBaseHandler {
   /// is used by the others.
   void generateTransactionError(std::string const& collectionName,
                                 OperationResult const& result,
-                                std::string const& key, TRI_voc_rid_t = 0);
+                                std::string const& key = "", TRI_voc_rid_t = 0);
 
   /// @brief generate an error message for a transaction error
   void generateTransactionError(std::string const& collectionName, 
@@ -208,12 +203,7 @@ class RestVocbaseBaseHandler : public RestBaseHandler {
                                 std::string const& key, TRI_voc_rid_t rid = 0) {
     generateTransactionError(collectionName, OperationResult(res), key, rid);
   }
-
-  /// @brief generate an error message for a transaction error
-  void generateTransactionError(OperationResult const& result) {
-    generateTransactionError("", result, "", 0);
-  }
-
+  
   /// @brief extracts the revision. "header" must be lowercase.
   TRI_voc_rid_t extractRevision(char const* header, bool& isValid) const;
 
